Activity edit fix (#101)
* moment-validator prefers the changed value before the old value
* validate the block on timepicker blur in every case
* Move timepicker logic all into component to avoid a dom element

--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -32,19 +32,21 @@
               </td>
               <td class="form-group {{if block.changeset.error.from 'has-error'}}">
                 {{sy-timepicker
-                  value     = block.changeset.from
-                  max       = block.changeset.to
-                  precision = 1
-                  on-change = (action (mut block.changeset.from))
+                  value        = block.changeset.from
+                  max          = block.changeset.to
+                  precision    = 1
+                  on-focus-out = (action 'validateChangeset' block.changeset)
+                  on-change    = (action (mut block.changeset.from))
                 }}
               </td>
               <td>-</td>
               <td class="form-group {{if block.changeset.error.to 'has-error'}}">
                 {{sy-timepicker
-                  value     = block.changeset.to
-                  min       = block.changeset.from
-                  precision = 1
-                  on-change = (action (mut block.changeset.to))
+                  value        = block.changeset.to
+                  min          = block.changeset.from
+                  precision    = 1
+                  on-focus-out = (action 'validateChangeset' block.changeset)
+                  on-change    = (action (mut block.changeset.to))
                 }}
               </td>
               <td>
