Minor absence modal fixes
* Rollback the modal data after closing it
* Set the center of the calendar to the selected date
* Preselect the selected date in the new absence calendar

--- a/app/components/sy-modal/template.hbs
+++ b/app/components/sy-modal/template.hbs
@@ -1,5 +1,5 @@
 {{#ember-wormhole to='sy-modals'}}
-  {{#sy-modal/overlay visible=visible}}
+  {{#sy-modal/overlay visible=visible on-close=(action 'close')}}
     <div class="modal-dialog {{if size (concat 'modal-dialog--' size)}}">
       {{yield (hash
         header = (component 'sy-modal/header' close=(action 'close'))
