--- a/app/index/reports/template.hbs
+++ b/app/index/reports/template.hbs
@@ -1,8 +1,8 @@
 <div class="btn-toolbar btn-toolbar--right form-group">
   <button type="button" class="btn btn-success" title="Move all entries to another date" {{action (mut showReschedule) true}}>Reschedule</button>
 </div>
-<table class="table table--striped table--reports table--form table--form-inline-lg">
-  <tbody>
+<div class="table table--striped table--reports table--form table--form-inline-lg">
+  <div class="table-body">
     {{#each reports as |report|}}
       {{#if report.verifiedBy}}
         <tr title="This entry is already verified and therefore not editable anymore">
@@ -31,8 +31,8 @@
         </td>
       </tr>
     {{/each}}
-  </tbody>
-</table>
+  </div>
+</div>
 {{#sy-modal visible=showReschedule size="small" as |modal|}}
   {{#modal.header}}
     Reschedule timesheet
