--- a/app/components/report-row/template.hbs
+++ b/app/components/report-row/template.hbs
@@ -1,9 +1,9 @@
 {{#task-selection task=changeset.task as |t|}}
-  <div class="form-group {{if changeset.error.task 'has-error'}}">{{t.customer}}</div>
-  <div class="form-group {{if changeset.error.task 'has-error'}}">{{t.project}}</div>
-  <div class="form-group {{if changeset.error.task 'has-error'}}">{{t.task}}</div>
+  <div class="form-list-cell form-group {{if changeset.error.task 'has-error'}}">{{t.customer}}</div>
+  <div class="form-list-cell form-group {{if changeset.error.task 'has-error'}}">{{t.project}}</div>
+  <div class="form-list-cell form-group {{if changeset.error.task 'has-error'}}">{{t.task}}</div>
 {{/task-selection}}
-<div class="form-group">
+<div class="form-list-cell form-group">
   <input
     type="text"
     class="form-control"
@@ -14,14 +14,14 @@
     data-test-report-comment
   >
 </div>
-<div class="form-group">{{sy-durationpicker data-test-report-duration value=changeset.duration on-change=(action (mut changeset.duration))}}</div>
-<div class="form-group">
+<div class="form-list-cell form-group">{{sy-durationpicker data-test-report-duration value=changeset.duration on-change=(action (mut changeset.duration))}}</div>
+<div class="form-list-cell form-group">
   {{sy-checkbox data-test-report-review checked=changeset.review on-change=(action (mut changeset.review)) label='Needs review'}}
 </div>
-<div class="form-group">
+<div class="form-list-cell form-group">
   {{sy-checkbox data-test-report-not-billable checked=changeset.notBillable on-change=(action (mut changeset.notBillable)) label='Not billable'}}
 </div>
-<div class="form-group">
+<div class="form-list-cell form-group">
   <button type="button" data-test-delete-report class="btn btn-danger" {{action 'delete'}}>{{fa-icon 'trash'}}</button>
   <button type="submit" data-test-save-report class="btn btn-primary" disabled={{or (not changeset.isDirty) (not changeset.isValid)}} {{action 'save'}}>{{fa-icon 'save'}}</button>
 </div>
