--- a/app/reschedule/template.hbs
+++ b/app/reschedule/template.hbs
@@ -18,56 +18,67 @@
   on-apply      = (action 'applyFilter')
 }}
 
-{{#paginated-table data-test-filter-results class='table--analysis-reschedule table--form table--form-inline' as |t|}}
-  {{#t.head}}
-    <tr>
-      {{#sort-header update=(action (mut ordering)) current=ordering by='user__username'}}User{{/sort-header}}
-      {{#sort-header update=(action (mut ordering)) current=ordering by='date'}}Date{{/sort-header}}
-      {{#sort-header update=(action (mut ordering)) current=ordering by='duration'}}Duration{{/sort-header}}
-      {{#sort-header update=(action (mut ordering)) current=ordering by='task__project__customer__name'}}Customer{{/sort-header}}
-      {{#sort-header update=(action (mut ordering)) current=ordering by='task__project__name'}}Project{{/sort-header}}
-      {{#sort-header update=(action (mut ordering)) current=ordering by='task__name'}}Task{{/sort-header}}
-      {{#sort-header update=(action (mut ordering)) current=ordering by='comment'}}Comment{{/sort-header}}
-      <th>Needs review</th>
-      <th>Not billable</th>
-      <th>Verified</th>
-      <th>
-        {{#if model.length}}
-          <button type="button" data-test-verify-page class="btn btn-success" title="Verify page" {{action 'verifyPage'}}>{{fa-icon 'check'}}</button>
-        {{/if}}
-      </th>
-    </tr>
-  {{/t.head}}
-  {{#t.body}}
-    {{#each model as |report|}}
-      {{report-reschedule-row report
-        data-test-reschedule-report
-        data-test-reschedule-report-id = report.id
-        verifyUser                     = currentUser
-        on-save                        = (route-action 'saveReport')
-      }}
-    {{^}}
-      <tr>
-        <td colspan="11" class="text-center">
-          {{#if (is-array model)}}
-            I didn't find any results - try loosening your filters!
-          {{else}}
-            Please specify some filter parameters.
+{{#if model.length}}
+  <div class="form-list form-list--reschedule" data-test-filter-results>
+    <div class="form-list-head">
+      <div class="form-list-row">
+        {{#sort-header tagName='div' class='form-list-cell' update=(action (mut ordering)) current=ordering by='user__username'}}User{{/sort-header}}
+        {{#sort-header tagName='div' class='form-list-cell' update=(action (mut ordering)) current=ordering by='date'}}Date{{/sort-header}}
+        {{#sort-header tagName='div' class='form-list-cell' update=(action (mut ordering)) current=ordering by='duration'}}Duration{{/sort-header}}
+        {{#sort-header tagName='div' class='form-list-cell' update=(action (mut ordering)) current=ordering by='task__project__customer__name'}}Customer{{/sort-header}}
+        {{#sort-header tagName='div' class='form-list-cell' update=(action (mut ordering)) current=ordering by='task__project__name'}}Project{{/sort-header}}
+        {{#sort-header tagName='div' class='form-list-cell' update=(action (mut ordering)) current=ordering by='task__name'}}Task{{/sort-header}}
+        {{#sort-header tagName='div' class='form-list-cell' update=(action (mut ordering)) current=ordering by='comment'}}Comment{{/sort-header}}
+        <div class="form-list-cell">Needs review</div>
+        <div class="form-list-cell">Not billable</div>
+        <div class="form-list-cell">Verified</div>
+        <div class="form-list-cell">
+          {{#if model.length}}
+            <button type="button" data-test-verify-page class="btn btn-success" title="Verify page" {{action 'verifyPage'}}>{{fa-icon 'check'}}</button>
           {{/if}}
-        </td>
-      </tr>
-    {{/each}}
-  {{/t.body}}
-  {{#t.foot
-    pages     = model.meta.pagination.pages
-    page      = page
-    page_size = page_size
-  }}
-    {{#if (is-array model)}}
-      <tr>
-        <td colspan="2"><strong>Total:</strong></td>
-        <td colspan="9"><strong class="total">{{format-duration model.meta.totalTime false}}</strong></td>
-      </tr>
-    {{/if}}
-  {{/t.foot}}
-{{/paginated-table}}
+        </div>
+      </div>
+    </div>
+    <div class="form-list-body">
+      {{#each model as |report|}}
+        {{report-reschedule-row report
+          data-test-reschedule-report
+          data-test-reschedule-report-id = report.id
+          verifyUser                     = currentUser
+          on-save                        = (route-action 'saveReport')
+        }}
+      {{/each}}
+    </div>
+    <div class="form-list-foot">
+      <div class="form-list-row">
+        <div class="form-list-cell"><strong>Total:</strong></div>
+        <div class="form-list-cell"></div>
+        <div class="form-list-cell"><strong class="total">{{format-duration model.meta.totalTime false}}</strong></div>
+        <div class="form-list-cell"></div>
+        <div class="form-list-cell"></div>
+        <div class="form-list-cell"></div>
+        <div class="form-list-cell"></div>
+        <div class="form-list-cell"></div>
+        <div class="form-list-cell"></div>
+        <div class="form-list-cell"></div>
+        <div class="form-list-cell"></div>
+      </div>
+    </div>
+    <div class="form-list-caption">
+      {{#if (gt model.meta.pagination.pages 1)}}
+        {{pagination-pager current=page count=model.meta.pagination.pages class='pagination-nav'}}
+      {{/if}}
+      {{pagination-limit page=page page_size=page_size}}
+    </div>
+  </div>
+{{else}}
+  <div class="text-center">
+    <em>
+      {{#if (is-array model)}}
+        I didn't find any results - try loosening your filters!
+      {{else}}
+        Please specify some filter parameters.
+      {{/if}}
+    </em>
+  </div>
+{{/if}}
