--- a/app/styles/reports.scss
+++ b/app/styles/reports.scss
@@ -1,47 +1,58 @@
-.table--reports > tbody > form > .form-group {
-  &:nth-child(5),
-  &:nth-child(6),
-  &:nth-child(7),
-  &:nth-child(8) {
-    flex-basis: 25%;
-    flex-grow: 0;
-    margin: 0;
-  }
+.form-list--reports {
+  white-space: nowrap;
 
-  &:nth-child(6) {
-    padding-left: 1rem;
-  }
+  .form-list-body > .form-list-row > .form-list-cell {
+    &:nth-child(5),
+    &:nth-child(6),
+    &:nth-child(7),
+    &:nth-child(8) {
+      flex-basis: 25%;
+      flex-grow: 0;
+      margin: 0;
+    }
 
-  &:nth-child(8) {
-    text-align: right;
-    flex-grow: 1;
+    &:nth-child(6) {
+      padding-left: 1rem;
+    }
 
-    .btn {
-      display: inline-flex;
+    &:nth-child(8) {
+      text-align: right;
+      flex-grow: 1;
+
+      .btn {
+        display: inline-flex;
+      }
     }
   }
 }
 
 @media (--lg-viewport) {
-  .table--reports > tbody > form > .form-group {
-    &:nth-child(1),
-    &:nth-child(2),
-    &:nth-child(3),
-    &:nth-child(4) {
-      width: 14%;
-    }
+  .form-list--reports {
+    @include form-list--inline;
 
-    &:nth-child(5) {
-      width: 75px;
-    }
+    .form-list-body > .form-list-row > .form-list-cell {
+      &:nth-child(1),
+      &:nth-child(2),
+      &:nth-child(3) {
+        width: 15%;
+      }
 
-    &:nth-child(6),
-    &:nth-child(7) {
-      width: 140px;
-    }
+      &:nth-child(4) {
+        width: auto;
+      }
 
-    &:nth-child(8) {
-      width: 100px;
+      &:nth-child(5) {
+        width: 75px;
+      }
+
+      &:nth-child(6),
+      &:nth-child(7) {
+        width: 140px;
+      }
+
+      &:nth-child(8) {
+        width: 110px;
+      }
     }
   }
 }
