Statistics: Work in progress

--- a/app/protected/template.hbs
+++ b/app/protected/template.hbs
@@ -14,6 +14,7 @@
           {{sy-sidenav-item 'reschedule' 'refresh' 'Reschedule'}}
         {{/if}}
         {{sy-sidenav-item 'users' 'users' 'Users'}}
+        {{sy-sidenav-item 'statistics' 'bar-chart' 'Statistics'}}
       {{/sy-sidenav-list}}
     {{/if}}
     {{#sy-sidenav-list class='sy-sidenav-list--logout'}}
