--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,6 +11,7 @@
 @import 'progress-tooltip';
 @import 'reports';
 @import 'reschedule';
+@import 'statistics';
 @import 'toolbar';
 @import 'tour';
 
