--- a/app/statistics/template.hbs
+++ b/app/statistics/template.hbs
@@ -18,13 +18,21 @@
   on-apply      = (action 'applyFilter')
 }}
 
-<ul class="nav-tabs">
-  <li>{{#link-to 'statistics.customer'}}By customer{{/link-to}}</li>
-  <li>{{#link-to 'statistics.project'}}By project{{/link-to}}</li>
-  <li>{{#link-to 'statistics.task'}}By task{{/link-to}}</li>
-  <li>{{#link-to 'statistics.user'}}By user{{/link-to}}</li>
-  <li>{{#link-to 'statistics.year'}}By year{{/link-to}}</li>
-  <li>{{#link-to 'statistics.month'}}By month{{/link-to}}</li>
-</ul>
+<div>
+  <div class="grid grid--12of12">
+    <div class="grid-cell">
+      <ul class="nav-tabs">
+        <li>{{#link-to 'statistics.customer'}}By customer{{/link-to}}</li>
+        <li>{{#link-to 'statistics.project'}}By project{{/link-to}}</li>
+        <li>{{#link-to 'statistics.task'}}By task{{/link-to}}</li>
+        <li>{{#link-to 'statistics.user'}}By user{{/link-to}}</li>
+        <li>{{#link-to 'statistics.year'}}By year{{/link-to}}</li>
+        <li>{{#link-to 'statistics.month'}}By month{{/link-to}}</li>
+      </ul>
+    </div>
 
-{{outlet}}
+    <div class="grid-cell">
+      <div class="tab-content">{{outlet}}</div>
+    </div>
+  </div>
+</div>
