--- a/app/components/statistic-bar/styles.scss
+++ b/app/components/statistic-bar/styles.scss
@@ -1,16 +1,26 @@
 & {
-  display: block;
   width: 100%;
   height: 20px;
+  overflow: hidden;
+
+  --value: 0;
+
+  &::before {
+    content: '';
+    display: block;
+    height: 100%;
+    width: 100%;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background-color: var(--color-primary);
+
+    transform: translateX(calc((1 - var(--value)) * -100%));
+
+    transition: transform 0.5s cubic-bezier(0.86, 0, 0.07, 1);
+    animation:  slide-in-statistic-bar 0.5s cubic-bezier(0.86, 0, 0.07, 1);
+  }
 }
 
-bar {
-  display: block;
-  height: 100%;
-  width: 0;
-  background: linear-gradient(to left, var(--color-primary), color(var(--color-primary) a(75%)));
-  border-right: 1px solid color(var(--color-primary) shade(20%));
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  box-shadow: 1px 1px 5px rgba(0,0,0,0.25);
+@keyframes slide-in-statistic-bar {
+  0% { transform: translateX(-100%); }
 }
