WIP: Finished statistics

--- a/app/components/loading-spinner/template.hbs
+++ b/app/components/loading-spinner/template.hbs
@@ -1,2 +1,9 @@
-<div class="box"></div>
-<div class="shadow"></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
