--- a/app/components/sy-sidenav/template.hbs
+++ b/app/components/sy-sidenav/template.hbs
@@ -1,4 +1,4 @@
-<nav class="nav-side {{if slide 'slide-in'}} {{if expand 'nav-side--expand'}} {{if autohide 'nav-side--autohide'}}">
+<nav class="nav-side {{if expand 'nav-side--expand'}} {{if autohide 'nav-side--autohide'}}">
   <header class="nav-side-header">
     <button class="nav-toggle nav-side-toggle" type="button" {{action 'toggle'}}>
       <span class="nav-toggle-icon"></span>
