--- a/app/components/loading-spinner/styles.scss
+++ b/app/components/loading-spinner/styles.scss
@@ -1,76 +1,68 @@
 & {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  opacity: 0;
-  transform: tranlate(-50%, -50%);
+  --size: 120px;
+  --color: lightgrey;
 
-  animation: show 0.5s ease 0.5s forwards;
-
-  --size: 50px;
-  --color: var(--color-tertiary);
-  --duration: 0.5s;
-}
-
-.box {
-  width: var(--size);
+  display: inline-flex;
+  flex-wrap: wrap;
   height: var(--size);
-  top: 0;
-  left: 0;
-
-  background: var(--color);
-  animation: animate var(--duration) linear infinite;
-  position: absolute;
-  will-change: transform;
-  z-index: 1;
-  border-radius: 3px;
-}
-
-.shadow {
   width: var(--size);
-  height: calc(0.1 * var(--size));
-  background: rgba(0,0,0,0.2);
-  top: calc(1.15 * var(--size));
-  left: 0;
 
-  position: absolute;
-  z-index: 0;
-  border-radius: 50%;
-  animation: shadow var(--duration) linear infinite;
+  animation: loading-pop-up 1s ease forwards;
+
+  > div {
+    height: calc(1 / 3 * var(--size));
+    width: calc(1 / 3 * var(--size));
+    position: relative;
+
+    &:nth-child(1)::before,
+    &:nth-child(3)::before,
+    &:nth-child(7)::before,
+    &:nth-child(9)::before {
+      animation-delay: 500ms;
+    }
+
+    &:nth-child(2)::before,
+    &:nth-child(4)::before,
+    &:nth-child(6)::before,
+    &:nth-child(8)::before {
+      animation-delay: 1000ms;
+    }
+
+    &::before {
+      content: '';
+      display: block;
+      height: 80%;
+      width: 80%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+      background-color: var(--color);
+      will-change: opacity;
+
+      animation: loading-flash 2s linear infinite;
+    }
+  }
 }
 
-@keyframes show {
+@keyframes loading-pop-up {
   0% {
     opacity: 0;
-    transform: tranlate(-50%, -50%) scale(0.1);
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes loading-flash {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.2;
   }
   to {
     opacity: 1;
-    transform: tranlate(-50%, -50%) scale(1);
-  }
-}
-
-@keyframes animate {
-  17% {
-    border-bottom-right-radius: 3px;
-  }
-  25% {
-    transform: translateY(9px) rotate(22.5deg);
-  }
-  50% {
-    transform: translateY(18px) scale(1,.9) rotate(45deg) ;
-    border-bottom-right-radius: 40px;
-  }
-  75% {
-    transform: translateY(9px) rotate(67.5deg);
-  }
-  100% {
-    transform: translateY(0) rotate(90deg);
-  }
-}
-
-@keyframes shadow {
-  50% {
-    transform: scale(1.2,1);
   }
 }
