Cleanup old stuff

--- a/app/components/statistic-list/template.hbs
+++ b/app/components/statistic-list/template.hbs
@@ -1,6 +1,6 @@
 {{#if data.isRunning}}
   <div class="empty">
-    {{loading-spinner}}
+    {{loading-icon}}
   </div>
 {{else if data.last.isError}}
   <div class="empty">
