--- a/app/components/loading-icon/template.hbs
+++ b/app/components/loading-icon/template.hbs
@@ -1,9 +1,9 @@
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
+<span class="loading-dot"></span>
+<span class="loading-dot"></span>
+<span class="loading-dot"></span>
+<span class="loading-dot"></span>
+<span class="loading-dot"></span>
+<span class="loading-dot"></span>
+<span class="loading-dot"></span>
+<span class="loading-dot"></span>
+<span class="loading-dot"></span>
