--- a/app/protected/template.hbs
+++ b/app/protected/template.hbs
@@ -5,6 +5,7 @@
       {{sy-sidenav-item 'me' 'user' 'Profile'}}
       {{#if (or media.isMd media.isLg media.isXl)}}
         {{sy-sidenav-item 'analysis' 'line-chart' 'Analysis'}}
+        {{sy-sidenav-item 'statistics' 'bar-chart' 'Statistics'}}
       {{/if}}
     {{/sy-sidenav-list}}
 
