--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,6 +11,7 @@
 @import 'progress-tooltip';
 @import 'reports';
 @import 'reschedule';
+@import 'statistics';
 @import 'toolbar';
 @import 'tour';
 
@@ -216,5 +217,28 @@ body {
     .grid-cell:first-child {
       padding-left: 1rem;
     }
+  }
+}
+
+.empty {
+  color: color(var(--color-border) shade(25%));
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  .fa {
+    margin-bottom: 1rem;
+    font-size: 10rem;
+    color: var(--color-border);
+  }
+
+  .loading-spinner {
+    --color: color(var(--color-border) shade(25%));
+  }
+
+  h3 {
+    color: inherit;
   }
 }
