Add cost center filter for statistics, reschedule and analysis

--- a/app/analysis/template.hbs
+++ b/app/analysis/template.hbs
@@ -2,6 +2,7 @@
 
 {{report-filter
   billingTypes  = billingTypes
+  costCenters   = costCenters
   initial       = (hash
     customer    = _customer
     project     = _project
@@ -9,6 +10,7 @@
     user        = _user
     reviewer    = _reviewer
     billingType = billing_type
+    costCenter  = cost_center
     fromDate    = _from
     toDate      = _to
     review      = review
