--- a/app/reschedule/template.hbs
+++ b/app/reschedule/template.hbs
@@ -9,6 +9,7 @@
     user        = _user
     reviewer    = _reviewer
     billingType = billing_type
+    costCenter  = cost_center
     fromDate    = _from
     toDate      = _to
     review      = review
