Fix report export urls (#127)

--- a/app/analysis/template.hbs
+++ b/app/analysis/template.hbs
@@ -66,7 +66,7 @@
 
   <p>
     {{#each exportLinks as |link index|}}
-      <button {{action 'download' link.url}}
+      <button {{action 'download' link.url link.params}}
         type="button"
         disabled={{gt model.length 4000}}
         class="btn btn-default"
